--- a/templates/currency_rate_form.html
+++ b/templates/currency_rate_form.html
@@ -17,17 +17,29 @@ body {
 <body>
   <div class="container">
 <h1>Currency rate for the specified date and currency</h1>
-      <form id='form_date_curr_code' action="/" method="get">
+      {% if error_message_date_code %}
+    <p style="color: red;">{{ error_message_date_code }}</p>
+    {% endif %}
+      <form id='form_date_curr_code' action="/getCurrRateByDateCurCode" method="get">
         <label for="date">Date (YYYY-MM-DD):</label>
         <input type="text" id="date" name="date" required><br><br>
 
-        <label for="currency_code">Currency Code:</label>
-        <input type="text" id="currency_code" name="currency_code" required><br><br>
+        <label for="currency_code">Currency Code (ISO 4217 3 letters):</label>
+        <input type="text" id="cur_id" name="cur_id" required><br><br>
 
         <input type="submit" value="Get Rate">
     </form>
+  {% if rate_date_curr_id %}
+    <p>Abbreviation: {{ rate_date_curr_id['Cur_Abbreviation'] }}</p>
+    <p>Date: {{ rate_date_curr_id['Date'] }}</p>
+    <p>Scale: {{ rate_date_curr_id['Cur_Scale'] }}</p>
+    <p>Official Rate: {{ rate_date_curr_id['Cur_OfficialRate'] }}</p>
+    {% endif %}
       <br><br>
   <h1>All currency rates for the specified date</h1>
+  {% if error_message_date %}
+    <p style="color: red;">{{ error_message_date }}</p>
+    {% endif %}
       <form id='form_date' action="/" method="get">
         <label for="date">Date (YYYY-MM-DD):</label>
         <input type="text" id="date" name="date" required><br><br>
