--- a/templates/currency_rate_form.html
+++ b/templates/currency_rate_form.html
@@ -40,12 +40,18 @@ body {
   {% if error_message_date %}
     <p style="color: red;">{{ error_message_date }}</p>
     {% endif %}
-      <form id='form_date' action="/" method="get">
+      <form id='form_date' action="/getCurrRateByDate" method="get">
         <label for="date">Date (YYYY-MM-DD):</label>
         <input type="text" id="date" name="date" required><br><br>
 
         <input type="submit" value="Get Rate">
     </form>
+  {% for curr in rate_date %}
+      <p>Abbreviation: {{ curr['Cur_Abbreviation'] }}</p>
+      <p>Date: {{ curr['Date'] }}</p>
+      <p>Scale: {{ curr['Cur_Scale'] }}</p>
+      <p>Official Rate: {{ curr['Cur_OfficialRate'] }}</p>
+      {% endfor %}
   </div>
 <script src="{{ url_for('static', filename='currency_rate_form.js') }}"></script>
 </body>
